	* Show the size of the members in the JSON file in the import file dialog
	* [worksheet] In the Export Worksheet Dialog allow to export to the clipboard
	* [worksheet] Allow to move plots, text labels and legend with arrow keys
	* [worksheet] Image worksheet element
	* [worksheet] Reference line on the plot
	* [worksheet] Support for imperial units for geometry and size settings of objects
	* Allow to open Cantor and Jupyter projects

Bug fixes:
    BUG: 418390 - Ignore infinite values (created in CAS worksheets for example) in curves
    BUG: 412455 - Don't crash (sporadically) when opening the color scheme menu
    BUG: 415214 - Better algorithm to draw the error bar caps
    BUG: 413397 - Properly handle removal of columns in the spreadsheet model
    BUG: 413401 - In plot data dialog, don't add new worksheets as children to workbooks, use the proper parent aspect

-----2.7 (24.10.2019)-----
New features:
	* Allow to move objects (drag&drop) to different folders in the project explorer
	* [spreadsheet] allow to insert multiple rows and columns in one step
	* [spreadsheet] improved the handling of calculated columns (values calculated via a formula):
		* Allow to automatically update the calculated column on data changes in the variable columns
		* Invalidate the calculated column if one of the variable columns was deleted
		* In "Functions Values" dialog highlight the variable column combobox red if the variable column was deleted in the project
		* In "Functions Values" dialog don't allow to select columns to be calculated as variable columns (avoid circular dependencies)
		* In "Used in" context menu of a column show all other calculated columns where this column is used as a variable
	* [spreadsheet] when pasting data into empty columns, automatically convert their type to the type of the data to be pasted
	* BUG 406805 - support für directory structures in ROOT files